# sr-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  session-summary.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
data/finetune/: README.md
docker/: Dockerfile.foundry  Dockerfile.mythril  Dockerfile.slither
docs/: audit-agent.md  eval-principles.md  kernel.md  roadmap.md
docs/diagrams/: README.md  architecture-overview.md  chat-turn-flow.md  poc-writing-flow.md
eval/: dataset.py  regression.py  runner.py
eval/contracts/: README.md
examples/inheritance-vault/: Vault.sol
examples/vulnerable-vault/: Vault.sol
frontend/: Dockerfile  __init__.py  docker-compose.yml
frontend/backend/: __init__.py  app.py  clone.py  confirm.py  events.py  model_config.py  requirements.txt  sessions.py  state.py
frontend/ui/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
knowledge/vulnerability-patterns/: reentrancy.md
research/: cloud-gpu-hosting.md  eval.md  frameworks.md  guardrails.md  io.md  llm-core.md  memory.md  orchestrator.md  paper-analysis-template.md  planner.md  relay-architecture.md  secure-rlm-design.md  tools.md
research/papers/: 2606.03128-decoupled-smart-contract-audits.md  2606.03387-bastet-dataset.md  2606.05418-mev-formal-framework.md  2606.05986-attackpathgnn.md  2606.14554-interoperability-threats.md  2606.15465-audit-gap.md  aiuc-1-rag-controls.md  blockaid-private-key-compromise-2026.md  cicada-hq-audit-methodology.md  composable-security-prompt-injection-mistakes.md  devansh-needle-haystack-llm-vulns.md  pkqs91-codex-bounty-workflow.md  zealynx-agentic-defi-security.md
scripts/: bench.py  codegraph.py  demo_attack.sh  gpu_box_bootstrap.sh  patch_reconstruct.py  poc_queue.json  poc_queue_runner.py  proof_bench.py  requirements.txt  solidity_fixers.py  solidity_index.py  solidity_invariants.py  solidity_utils.py
scripts/finetune/: Modelfile  eval_finetune.py  finetune_stage2.py  generate_mi_rejections.py  prepare_dataset.py
specs/001-secure-memory-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-smartgraphical-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-interactive-chat-mode/: data-model.md  plan.md  (+4 more)
sr_agent/: cli.py  config.py
(+434 files in other folders)
